--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@ body {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  filter: drop-shadow(0 0 20px rgba(168, 85, 247, 0.5))
-    drop-shadow(0 0 40px rgba(236, 72, 153, 0.3));
+  filter: drop-shadow(0 0 20px rgba(85, 126, 247, 0.5))
+    drop-shadow(0 0 40px rgba(236, 72, 153, 0.3))
+    drop-shadow(0 0 40px rgba(255, 225, 0, 0.3))
+    ;
 }
