--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,16 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+/* Aurora animation */
+@keyframes aurora {
+  from {
+    background-position: 50% 50%, 50% 50%;
+  }
+  to {
+    background-position: 350% 50%, 350% 50%;
+  }
+}
+
 /* Preload the font for SVG mask */
 @font-face {
   font-family: 'MaskFont';
